<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string-array name="category">
        <item>Accommodation</item>
        <item>Air Fare</item>
        <item>Fuel</item>
        <item>Ground Transport</item>
        <item>Meal</item>
        <item>Parking</item>
        <item>Registration</item>
        <item>Vehicle Rental</item>
    </string-array>
    
    <string-array name="currency">
        <item>CAD</item>
        <item>EUR</item>
        <item>GBP</item>
        <item>RMB</item>
        <item>USD</item>
    </string-array>
    
    <string name="app_name">rlieu-notes</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_claim">ClaimActivity</string>
    <string name="email">Email</string>
    <string name="expense_name">Expense</string>
    <string name="claim_name">Claim</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="date">Date</string>
    <string name="amount">Amount</string>
    <string name="add_claim">Add Claim</string>
    <string name="status">Status</string>
    <string name="expense_items">Expenses</string>
    <string name="done">Done</string>
    <string name="send">Send</string>
    <string name="claims">Claims</string>
    <string name="header">Header</string>
    <string name="add">Add</string>
    <string name="totals">Totals</string>
    <string name="no_totals">No Totals</string>
    <string name="blank"></string>
    <string name="end_date">End Date</string>
    <string name="start_date">Start Date</string>
    <string name="name">Name</string>
    <string name="add_expense_item">Add Expense Item</string>
    <string name="currency">Currency</string>
    <string name="title_activity_expense">ExpenseActivity</string>
    <string name="top">Top</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="in_progress">In Progress</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="approve">Approve</string>
    <string name="return_item">Return</string>
    <string name="ok">OK</string>
    <string name="delete_claim">Delete Claim</string>
    <string name="edit_claim">Edit Claim</string>
    <string name="submitted">Submitted</string>
    <string name="approved">Approved</string>
    <string name="title_activity_date_picker">DatePickerActivity</string>
    <string name="returned">Returned</string>
    <string name="confirm">Confirm</string>
    <string name="edit_expense">Edit Expense</string>
    <string name="save">Save</string>
    <string name="close">Close</string>
    <string name="delete_expense">Delete Expense</string>

</resources>
