<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp" >

	<TextView
	    android:id="@+id/listexpensedate"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_weight="1"
	    android:gravity="start"
	    android:text="@string/date"
	    android:textAppearance="?android:attr/textAppearanceMedium" />

	<TextView
	    android:id="@+id/listexpensename"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_weight="5.30"
	    android:gravity="start"
	    android:text="@string/expense_name"
	    android:textAppearance="?android:attr/textAppearanceMedium" />
		
	<TextView
	    android:id="@+id/listexpenseamount"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_weight="1"
	    android:gravity="end"
	    android:text="@string/amount"
	    android:textAppearance="?android:attr/textAppearanceMedium" />

	<TextView
	    android:id="@+id/listexpensecurrency"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_weight="1"
	    android:gravity="start"
	    android:paddingStart="10dp"
	    android:paddingEnd="10dp"
	    android:text="@string/currency"
	    android:textAppearance="?android:attr/textAppearanceMedium" />

</LinearLayout>
