<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    
    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_margin="10dp"
        android:text="@string/status" 
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <EditText
	    android:id="@+id/enddate"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentEnd="true"
	    android:layout_below="@+id/status"
	    android:focusable="false"
	    android:focusableInTouchMode="false"
	    android:onClick="endDate"
	    android:layout_margin="10dp"
	    android:ems="10"
	    android:gravity="center"
	    android:hint="@string/end_date"
	    android:inputType="date" />

	<EditText
	    android:id="@+id/startdate"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_margin="10dp"
	    android:layout_toStartOf="@+id/enddate"
	    android:layout_below="@+id/status"
	   	android:focusable="false"
	    android:focusableInTouchMode="false"
	    android:onClick="startDate"
	    android:ems="10"
	    android:gravity="center"
	    android:hint="@string/start_date"
	    android:inputType="date" />
	
    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/enddate"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:ems="10"
        android:hint="@string/name"
        android:singleLine="true" />

    <EditText
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/name"
        android:layout_margin="10dp"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/description"
        android:inputType="textMultiLine" />

</RelativeLayout>
