<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" >

        <Button
            android:id="@+id/left"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="left"
            android:text="@string/left" />

        <Button
            android:id="@+id/right"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="right"
            android:text="@string/right" />

    </LinearLayout>

    <Button
        android:id="@+id/top"
        style="?android:attr/buttonBarButtonStyle"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:onClick="top"
        android:text="@string/top" />

</RelativeLayout>
